in progress refactor to support producer side queue closing when consumer disconects